<resources>

    <string name="app_name">StoreApp</string>
    <string name="test_data">Inser test data</string>
    <string name="delete_data">Delete all data</string>
    <string name="title_activity_editor">Enter a product</string>
    <string name="hint_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier</string>
    <string name="hint_supplier_number">Phone</string>
    <string name="button_text">Enter Product</string>
    <string name="product_text">Product data:</string>
    <string name="product_text_absent">no data available.</string>
    <string name="edit_product_title">Edit product details</string>
    <string name="enter_product_title">Enter product details</string>
    <string name="delete_product">Delete product</string>
    <string name="unsaved_product_data">Are you sure you want to discard your changes?</string>
    <string name="discard">Discard</string>
    <string name="delete">Delete</string>
    <string name="keep">Keep</string>
    <string name="failed_update">Failed updating product</string>
    <string name="successful_save">Saved product</string>
    <string name="successful_update">Saved product</string>
    <string name="successful_delete">Deleted product</string>
    <string name="unsuccessful_delete">Failed deleting product</string>
    <string name="delete_dialog">Are you sure you want to delete this product?</string>
    <string name="quantity_adjust_hint">Adjust available quantity:</string>
    <string name="sale_button_text">Sale</string>
    <string name="invalid_input">Invalid input</string>
    <string name="successful_sale">Product sold</string>
    <string name="unsuccessful_sale">No stock left</string>
    <string name="need_input">Please enter details for the product</string>
    <string name="need_input_phone">Enter a phone number to order</string>
    <string name="adjust_quantity_text">Adjust quantity:</string>
    <string name="empty_tetxt">Inventory is empty.</string>







</resources>
